--- a/WebViewLeaflet/package.json
+++ b/WebViewLeaflet/package.json
@@ -22,13 +22,14 @@
     "leaflet": "^1.7.1",
     "lodash.isequal": "^4.5.0",
     "react-dom": "^17.0.1",
-    "react-leaflet": "^3.0.5",
-    "react-native-webview": "^11.0.2"
+    "react-leaflet": "^3.0.5"
+   
   },
   "peerDependencies": {
     "react": "^16.9.0",
     "react-leaflet": "^2.6.1",
-    "react-native": "^0.61.2"
+    "react-native": "^0.61.2",
+    "react-native-webview": "^13.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
